--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
     - PYTHONPATH=/home/travis/build/mahikajain3/testSE
 
 script:
-    - make tests
+    - make all_tests
 
 # deploy to heroku on push to master
 deploy:
