--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      MAYS_HOME: /home/runner/work/MAYS/MAYS
+      MONGO_PASSWD: ${{secrets.MONGO_PASSWD}}
     steps:
       - uses: actions/checkout@v2
+      - name: Install requirements
+        run:  pip install -r requirements-dev.txt
+      
+      - name: Run tests
+        run: make all_tests
+      
+      - name: Deploy to Heroku
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
