--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "testse123" #Must be unique in Heroku
+          heroku_app_name: "makerspacebadges" #Must be unique in Heroku
           heroku_email: "mj2249@nyu.edu"
