Modifying create badge test to use flasks test client

--- a/API/makefile
+++ b/API/makefile
@@ -1,8 +1,10 @@
 DOCFILES = $(shell ls *.py | sed 's/.py/.html/')
+export PKG = API
 
 docs: $(DOCFILES)
 
 %.html: %.py
 	pydoc3 -w ./$<
 	git add $@
+
 include ../common.mk
